# PrimedGun

./: .gitattributes  .gitignore  .gitmodules  BUILDING-STEAMOS.md  CMakeLists.txt  README.md  build-quest-apk.sh  ic_prime_launcher.xml
CMake/: ScmRevGen.cmake
Data/Sys/GameSettings/: GM8.ini  GM8E01.ini
Data/Sys/GameSettingsVR/: D43E01.ini  D93E01.ini  G2M.ini  G2ME01.ini  G9SE8P.ini  G9SJ8P.ini  G9SP8P.ini  GALE01.ini  GHQE7D.ini  GKPJ6E.ini  GM4E01.ini  GM4E08.ini  GM8.ini  GM8E01.ini  GMBE8P.ini  GMSE04.ini  GMSP01.ini  GNJEAF.ini  GNLJ82.ini  GPIE01.ini  GSNE8P.ini  GUPE8P.ini  GUPR8P.ini  GW5E69.ini  GWWE01.ini  GXEE8P.ini  GXSE8P.ini  GXSRTE.ini  GZ2E01.ini  GZLE01.ini  ID-boot.ini  R32.ini  R3I.ini  R3M.ini  R3ME01.ini  RENP8P.ini  RM3.ini  RM3E01.ini  RMCE01.ini  RMCEA2.ini  (+10 more)
Flatpak/: dolphin-emu-wrapper  org.DolphinEmu.dolphin-emu.metainfo.xml.in  org.DolphinEmu.dolphin-emu.yml
PrimeGun configs/: README.txt
Source/Android/: build-quest-release.ps1  build-quest.ps1
Source/Android/app/: build.gradle.kts
Source/Core/VideoBackends/D3D12/: CMakeLists.txt  D3D12OpenXR.cpp  D3D12OpenXR.h  D3D12PrimedGunOverlay.cpp  D3D12PrimedGunOverlay.h  DX12Texture.cpp  DX12Texture.h  VideoBackend.cpp
assets/gecko/: GM8E01_PrimedGun.ini
docs/: Building-for-Windows.md  PrimeGunScanReticleTrace.md  PrimedGunScanReticleTrace.md
scripts/: build-steamos.sh
src/: dolphin_memory.h  gui.h  main.cpp  settings.h
src/dolphin_hook/: GameTimingHooks.cpp  HookRuntime.cpp  OpenXrHooks.cpp  VulkanHooks.cpp
src/hook_common/: HookLayout.h  PrimedGunShared.h
(+274 files in other folders)
